--- a/converter.ipynb
+++ b/converter.ipynb
@@ -63,7 +63,7 @@
         "input_pdf_name = list(uploaded_pdf.keys())[0]\n",
         "\n",
         "output_pdf = 'output_ocr.pdf'\n",
-        "lang = 'eng=hin'  # change to 'eng+hin' for English+Hindi\n",
+        "lang = 'eng'  # change to 'eng+hin' for English+Hindi\n",
         "zoom = 3.0    # increase for sharper OCR\n",
         "\n",
         "doc = fitz.open(stream=uploaded_pdf[input_pdf_name], filetype='pdf')\n",
