--- a/converter.ipynb
+++ b/converter.ipynb
@@ -13,15 +13,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-       # ⬇️ Install dependencies
-!pip -q install pillow pytesseract pymupdf
-!apt-get -qq update
-!apt-get -qq install -y tesseract-ocr   # English is built-in
-
-import pytesseract, fitz
-from PIL import Image
-print('✅ Setup complete with English OCR!')
-
+        "# ⬇️ Install dependencies\n",
+        "!pip -q install pillow pytesseract pymupdf\n",
+        "!apt-get -qq update\n",
+        "!apt-get -qq install -y tesseract-ocr   # English is built-in\n",
+        "\n",
+        "import pytesseract, fitz\n",
+        "from PIL import Image\n",
+        "from google.colab import files\n",
+        "import io\n",
+        "print('✅ Setup complete with English OCR!')"
       ]
     },
     {
@@ -33,9 +34,6 @@ print('✅ Setup complete with English OCR!')
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "from google.colab import files\n",
-        "import io\n",
-        "\n",
         "print('📤 Upload images...')\n",
         "uploaded = files.upload()\n",
         "filenames = list(uploaded.keys())\n",
@@ -65,8 +63,8 @@ print('✅ Setup complete with English OCR!')
         "input_pdf_name = list(uploaded_pdf.keys())[0]\n",
         "\n",
         "output_pdf = 'output_ocr.pdf'\n",
-        "lang = 'eng'  # change to 'eng+hin' for English+Hindi\n",
-        "zoom = 3.0    # increase for sharper OCR\n",
+        "lang = 'eng'   # English OCR\n",
+        "zoom = 2.0     # increase to 3.0 if text is blurry\n",
         "\n",
         "doc = fitz.open(stream=uploaded_pdf[input_pdf_name], filetype='pdf')\n",
         "new_doc = fitz.open()\n",
@@ -86,8 +84,14 @@ print('✅ Setup complete with English OCR!')
     }
   ],
   "metadata": {
-    "colab": {"name": "converter.ipynb"},
-    "kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}
+    "colab": {
+      "name": "converter.ipynb"
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
